Use material design for RespondViaSmsSettings
again inconsistent....change it to material design based on dialer to
have a consistent UI.

Change-Id: Ib9bc04fb8223941d222763069fd1c63bf67d7e87

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -195,6 +195,7 @@
 
         <activity android:name=".RespondViaSmsSettings$Settings"
                   android:label="@string/respond_via_sms_setting_title"
+                  android:theme="@style/SettingsStyle"
                   android:configChanges="orientation|screenSize|keyboardHidden"
                   android:process=":ui">
             <intent-filter>
